# fastapi

./: README.md  pyproject.toml
src/ffapi/: app.py
